--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             Maria Emília está chegando! Estamos preparando tudo com muito
             carinho. <br />Caso queira contribuir,
             <b>
-              Escolha um número abaixo, Verifique via Whatsapp se o número ainda
-              está disponpivel, e após isso assine pagando via PIX:</b
+              Escolha um número abaixo, ao escolher, confirme o envio via
+              WhatsApp. Após isso, assine pagando via PIX.</b
             >
           </p>
         </div>
