add: background image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="Página oficial do Chá de bebê da Mel" />
     <meta name="author" content="Eduardo Marques" />
-    <title>Chá de bebê da Mel - Melissa Moraes Marques</title>
+    <title>Chá de Fraudas - Maria Emília</title>
     <link rel="icon" type="image/x-icon" href="assets/ico/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&display=swap"
@@ -43,19 +43,20 @@
 
   <body>
     <section class="py-1">
+      <div style="height: 10px"></div>
       <div class="container px-4 px-lg-5 my-5">
         <div class="col-md-12 text-center">
           <h1 class="display-5 fw-bolder">Chá de fraudas da Maria Emília</h1>
         </div>
         <div class="col-md-12 text-center">
-          <p class="lead">
+          <h5>
             Maria Emília está chegando! Estamos preparando tudo com muito
             carinho. <br />Caso queira contribuir,
             <b>
               Escolha um número abaixo, ao escolher, confirme o envio via
               WhatsApp. Após isso, assine pagando via PIX.</b
             >
-          </p>
+          </h5>
         </div>
 
         <div class="col-md-12 text-center my-4">
